--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,90 @@ footer{
     padding:10px;
     text-align:center;
 }
+
+/*pseudoclasses*/
+nav li a:hover{
+    text-decoration: underline;
+    }
+
+.images li:hover{
+position: relative;
+top:-4px;
+
+}
+form input:focus{
+border:4px dashed #4b4b4b;
+outline: none;
+}
+form input:valid{
+    border:4px solid #71d300;
+}
+/*pseudo elements*/
+article p::first-line{
+    font-weight:bold;
+    font-size:1.2em;
+}
+section.join::first-letter{
+    font-size:1.5em;
+}
+p::selection{
+    background-color:#f63232;
+    color:white;
+    
+}
+p::after{
+    content: '.....';
+}
+
+/*response design*/
+@media screen and (max-width:1400px){
+    .banner .welcome h2{
+        font-size: 60px;        
+    }
+    nav li{
+        font-size:18px;
+    }
+}
+
+@media screen and (max-width:960px){
+     .banner .welcome h2{
+         font-size:40px;
+     }
+}
+
+@media screen  and (max-width:700px){
+.banner .welcome {
+position:relative;
+text-align:center;
+padding: 10px;
+}
+.banner .welcome br{
+    display:none;
+}
+.banner .welcome h2{
+    font-size:25px;
+}
+.banner .welcome span{
+    font-size: 1em;
+}
+.images li{
+    width:100%;
+    margin:20px auto;
+    display: block;
+}
+}
+@media screen and (max-width:560px){
+nav li{
+    font-size: 20px;
+    display:block;
+    width:100%;
+    margin :12px 0;
+}
+header{
+    position:relative;
+}
+nav{
+    top:0;
+}
+
+}
